--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen:supabase-types": "supabase gen types typescript --local > lib/database-types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -33,6 +34,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.474.0",
+    "marked": "^15.0.12",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
@@ -54,6 +56,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "supabase": "^2.26.9",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
