--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "gen:supabase-types": "supabase gen types typescript --local > lib/database-types.ts"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -29,6 +32,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.3",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/uuid": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -36,7 +40,7 @@
     "framer-motion": "^12.23.5",
     "lucide-react": "^0.474.0",
     "marked": "^15.0.12",
-    "next": "15.1.9",
+    "next": "15.1.11",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -46,6 +50,8 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.6",
+    "uuid": "^13.0.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.5"
   },
@@ -57,7 +63,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.9",
     "postcss": "^8",
-    "supabase": "^2.26.9",
+    "supabase": ">=1.8.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
